added examples